--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -6,9 +6,9 @@
     </div>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
-      <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/menu1/">Code blocks</a>
-      <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/menu2/">More goodies</a>
-      <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/menu3/">Tags</a>
+      <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/menu1/">Software Setup</a>
+      <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/menu2/">Data Handling</a>
+      <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/menu3/">Model Zoo</a>
     </nav>
     <p>&copy; {{fill author}}.</p>
   </div>
