--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -6,9 +6,9 @@
     </div>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
-      <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/menu1/">Software Setup</a>
-      <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/menu2/">Data Handling</a>
-      <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/menu3/">Model Zoo</a>
+      <a class="sidebar-nav-item {{ispage software-setup/*}}active{{end}}" href="/software-setup/">Software Setup</a>
+      <a class="sidebar-nav-item {{ispage data-handling/*}}active{{end}}" href="/data-handling/">Data Handling</a>
+      <a class="sidebar-nav-item {{ispage model-zoo/*}}active{{end}}" href="/model-zoo/">Model Zoo</a>
     </nav>
     <p>&copy; {{fill author}}.</p>
   </div>
