--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1><a href="/">CGS3342</a></h1>
-      <p class="lead">Cognitive & Neural Modeling Lab.</p>
+      <h4><a href="/">Computational Cognitive Modeling Lab</a></h4>
+      <p class="lead">A first course in modeling for Behavioral & Brain Scientists.</p>
     </div>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
