--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -324,3 +324,29 @@ code {
   border-radius: 0 10px 10px 0;
   border-left: 5px solid #4c9cf1;
 }
+
+.franklin-content .colbox-red {
+  background-color: #FFF5EE;
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-bottom: 5px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 0 10px 10px 0;
+  border-left: 5px solid #d2470b;
+}
+
+.franklin-content .colbox-yellow {
+  background-color: #FFFFE0;
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-bottom: 5px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 10px 10px 10px 10px;
+
+}
